<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/x30"
        android:src="@drawable/logo" />

    <com.app.gymbuzz.ui.views.AnyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/verifyEmailMessage"
        android:textColor="@color/tabbar_color"
        android:textSize="@dimen/x14"
        app:typeface="@string/font_normal" />

    <com.app.gymbuzz.ui.views.PinEntryEditText
        android:id="@+id/txt_pin_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@null"
        android:cursorVisible="false"
        android:digits="1234567890"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="4"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:visibility="visible"
        app:pinLineColors="@color/colorLogItemDetail"/>
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/btn"
        android:elevation="@dimen/x10"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

        <com.app.gymbuzz.ui.views.AnyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x10"
            android:gravity="start"
            android:text="@string/reset_code_question"
            android:textColor="@color/tabbar_color"
            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal"/>

        <com.app.gymbuzz.ui.views.AnyTextView
            android:id="@+id/btnResentCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x3"
            android:layout_marginTop="@dimen/x10"
            android:gravity="start"
            android:alpha="0.5"
            android:text="@string/reset_code"
            android:textColor="@color/color_accent"
            android:textSize="@dimen/x15"
            app:typeface="@string/font_bold"/>
    </LinearLayout>
</LinearLayout>