<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_bg"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x20"
            android:layout_marginEnd="@dimen/x25"
            android:layout_marginStart="@dimen/x25"
            android:layout_marginTop="@dimen/x30">

            <com.app.gymbuzz.ui.views.AnyEditTextView
                android:id="@+id/edtHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_height_in_cm"
                android:inputType="numberDecimal"
                android:textColor="@color/color_accent"
                android:textSize="@dimen/x14"
                android:maxLength="6"
                app:typeface="@string/font_normal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x40"
            android:layout_marginEnd="@dimen/x25"
            android:layout_marginStart="@dimen/x25"
            android:layout_marginTop="@dimen/x10"
            android:layout_below="@+id/tilFullName">

            <com.app.gymbuzz.ui.views.AnyEditTextView
                android:id="@+id/edtWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_weight_in_kg"
                android:inputType="numberDecimal|number"
                android:maxLength="6"
                android:textColor="@color/color_accent"
                android:textSize="@dimen/x14"
                app:typeface="@string/font_normal" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnComputeBmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/x25"
            android:layout_marginStart="@dimen/x25"
            android:background="@drawable/btn"
            android:text="@string/calculate_bmi"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:layout_below="@+id/tilEmail" />


        <LinearLayout
            android:layout_width="@dimen/x160"
            android:layout_height="@dimen/x140"
            android:layout_marginBottom="@dimen/x40"
            android:layout_marginTop="@dimen/x45"
            android:layout_centerHorizontal="true"
            android:background="@drawable/round_corner_rectangle"
            android:layout_below="@+id/btnComputeBmi"
            android:orientation="vertical"
            android:gravity="center">

            <com.app.gymbuzz.ui.views.AnyTextView
                android:id="@+id/txtHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/x3"
                android:text="@string/your_bmi"
                android:textColor="@color/white"
                android:textSize="@dimen/x14"
                app:typeface="@string/font_normal" />


            <com.app.gymbuzz.ui.views.AnyTextView
                android:id="@+id/txtBmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20.5"
                android:maxLength="4"
                android:textColor="@color/white"
                android:textSize="@dimen/x14"
                app:typeface="@string/font_bold" />


        </LinearLayout>


    </RelativeLayout>


</ScrollView>